force-app/main/default/objects/TeamStatistic__c/TeamStatistic__c.object-meta.xml
<CustomObject>
    <description>Statistics of teams played matches</description>
    <label>TeamStatistic</label>
    <nameField>
        <displayFormat>TeamStatistic - {000000}</displayFormat>
        <label>TeamStatistic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TeamStatistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>