force-app/main/default/objects/TeamStatistic__c/fields/CompletedPasses__c.field-meta.xml
<CustomField>
    <fullName>CompletedPasses__c</fullName>
    <description>Number of accurate passes made by team in the match</description>
    <label>Completed Passes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>