force-app/main/default/objects/TeamStatistic__c/fields/Corners__c.field-meta.xml
<CustomField>
    <fullName>Corners__c</fullName>
    <description>Number of corner kicks made by team in the match</description>
    <label>Corners</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>