force-app/main/default/objects/TeamStatistic__c/fields/Fouls__c.field-meta.xml
<CustomField>
    <fullName>Fouls__c</fullName>
    <description>Number of fouls completed by team in the match</description>
    <label>Fouls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>