force-app/main/default/objects/TeamStatistic__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Match</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>Match__c.HomeTeam__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>Match__c.Visitors__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>TeamStatistics</relationshipLabel>
    <relationshipName>TeamStatistics</relationshipName>
    <type>Lookup</type>
</CustomField>