force-app/main/default/objects/TeamStatistic__c/fields/Offsides__c.field-meta.xml
<CustomField>
    <fullName>Offsides__c</fullName>
    <description>Number of offsides recorded by team in the match</description>
    <label>Offsides</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>