force-app/main/default/objects/TeamStatistic__c/fields/OpponentGoals__c.field-meta.xml
<CustomField>
    <fullName>OpponentGoals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opponent Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>