force-app/main/default/objects/TeamStatistic__c/fields/PassesAccuracy__c.field-meta.xml
<CustomField>
    <fullName>PassesAccuracy__c</fullName>
    <description>Percentage of passes accuracy</description>
    <formula>CompletedPasses__c / TotalPasses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passes Accuracy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>