force-app/main/default/objects/TeamStatistic__c/fields/Possesion__c.field-meta.xml
<CustomField>
    <fullName>Possesion__c</fullName>
    <description>Percentage of ball possession</description>
    <label>Possesion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>