force-app/main/default/objects/TeamStatistic__c/fields/RedCard__c.field-meta.xml
<CustomField>
    <fullName>RedCard__c</fullName>
    <description>Number of received red cards in the match</description>
    <label>Red Card</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>