force-app/main/default/objects/TeamStatistic__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Match result</description>
    <formula>IF(  TeamGoals__c  &gt;  OpponentGoals__c , 
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J00000172L8&amp;operationContext=CHATTER&amp;contentId=05T5J000003OZFz&quot;, &quot;win&quot;),
IF( TeamGoals__c  &lt;  OpponentGoals__c,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J00000172L4&amp;operationContext=CHATTER&amp;contentId=05T5J000003OZFp&quot;, &quot;lose&quot;),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J00000172L3&amp;operationContext=CHATTER&amp;contentId=05T5J000003OZFk&quot;, &quot;draw&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>