force-app/main/default/objects/TeamStatistic__c/fields/ShotsOnTarget__c.field-meta.xml
<CustomField>
    <fullName>ShotsOnTarget__c</fullName>
    <description>Number of shots on target that team made in match</description>
    <label>Shots On Target</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>