force-app/main/default/objects/TeamStatistic__c/fields/TeamGoals__c.field-meta.xml
<CustomField>
    <fullName>TeamGoals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Team Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>