force-app/main/default/objects/TeamStatistic__c/fields/TotalPasses__c.field-meta.xml
<CustomField>
    <fullName>TotalPasses__c</fullName>
    <description>Number of passes made by team in the match</description>
    <label>Total Passes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>