force-app/main/default/objects/TeamStatistic__c/fields/TotalShots__c.field-meta.xml
<CustomField>
    <fullName>TotalShots__c</fullName>
    <description>Number of shots that team made in match</description>
    <label>Total Shots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>