force-app/main/default/objects/TeamStatistic__c/fields/YellowCard__c.field-meta.xml
<CustomField>
    <fullName>YellowCard__c</fullName>
    <description>Number of received yellow cards in the match</description>
    <label>Yellow Card</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>